k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aiverse-api-service
spec:
  selector:
    app: aiverse-api
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
  type: LoadBalancer
